Refs #106884 fixed stretching of portlet megatopics area
- set figure image 100% width for images seen in places like
  https://eea.europa.eu/themes/air/health-impacts-of-air-pollution

--- a/eea/design/skins/eeadesign_styles/eea-responsive.scss
+++ b/eea/design/skins/eeadesign_styles/eea-responsive.scss
@@ -397,11 +397,6 @@ $input-color: #f3f3f3;
   //  width: 100%;
   //}
 
-  .portlet-megatopic img {
-    width: 100%;
-    height: 150px;
-  }
-
   .portlet-megatopic ul {
     height: auto;
   }
